edit vis output

--- a/model_ours/Visualization.ipynb
+++ b/model_ours/Visualization.ipynb
@@ -382,7 +382,7 @@
     "parser = argparse.ArgumentParser()\n",
     "\n",
     "\n",
-    "parser.add_argument('--dataset_name', action=\"store\", dest= \"dataset_name\",default=\"GoogleEarth\",help='MSCOCO,GoogleMap,GoogleEarth,DayNight')\n",
+    "parser.add_argument('--dataset_name', action=\"store\", dest= \"dataset_name\",default=\"GoogleMap\",help='MSCOCO,GoogleMap,GoogleEarth,DayNight')\n",
     "\n",
     "\n",
     "parser.add_argument('--epoch_load_one', action=\"store\", dest=\"epoch_load_one\", type=int, default=10,help='epoch_load_one')\n",
