fix for run on SatVu data

--- a/model_ours/Visualization.ipynb
+++ b/model_ours/Visualization.ipynb
@@ -261,6 +261,9 @@
     "if input_parameters.dataset_name=='GoogleEarth':\n",
     "    data_loader_caller=data_loader_GoogleEarth('val')\n",
     "\n",
+    "if input_parameters.dataset_name=='SatVu':\n",
+    "    data_loader_caller=data_loader_SatVu('val')\n",
+    "\n",
     "if input_parameters.dataset_name=='DayNight':\n",
     "    data_loader_caller=data_loader_DayNight('val')"
    ]
@@ -300,8 +303,6 @@
     "    if len(np.shape(input_img))<2:\n",
     "        break\n",
     "\n",
-    "   \n",
-    "\n",
     "    if input_parameters.initial_type=='simple_net':\n",
     "        input_img_grey=tf.image.rgb_to_grayscale(input_img)\n",
     "        template_img_new=tf.image.pad_to_bounding_box(template_img, 32, 32, 192, 192)  \n",
@@ -336,11 +337,7 @@
     "        initial_matrix=np.dot(initial_matrix[0,:,:], np.linalg.inv(matrix_two[0,:,:]))\n",
     "        initial_matrix=np.expand_dims(initial_matrix,axis=0)\n",
     "        initial_matrix=construct_matrix(initial_matrix,scale_factor=0.25,batch_size=1)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
+    "    \n",
     "        \n",
     "    input_feature_one=level_one_input.call(input_img,training=False)\n",
     "    template_feature_one=level_one_template.call(template_img,training=False)\n",
